# drug-shortage-forecast

./: .env.example  .gitignore  LICENSE  Makefile  README.md  baseline.py  data_loader.py  error_analysis.ipynb  load_fda_shortages.py  pyproject.toml  requirements.txt
.github/dbt/: profiles.yml
.github/workflows/: ci.yml
dashboard/: 2025-04.md  2025-05.md  2025-06.md  2025-07.md  2025-08.md  2025-09.md  2025-10.md  2025-11.md  2025-12.md  2026-01.md  README.md
dbt/drug_shortage_dbt/: README.md  dbt_project.yml
dbt/drug_shortage_dbt/models/marts/: _schema.yml  mrt_shortage_panel.sql
dbt/drug_shortage_dbt/models/staging/: _schema.yml  _sources.yml  stg_cihi_formulary.sql  stg_dpd_comp.sql  stg_dpd_drug.sql  stg_dpd_form.sql  stg_dpd_ingred.sql  stg_dpd_route.sql  stg_dpd_schedule.sql  stg_dpd_status.sql  stg_dpd_ther.sql  stg_fda_shortages.sql  stg_hc_discontinuations.sql  stg_hc_shortages.sql
notebooks/: baseline.py  data_audit.ipynb  data_loader.py  error_analysis.ipynb  load_fda_shortages.py  model_summary.ipynb  operational_metrics.py  warm_cold_model.py
src/ingest/: __init__.py  ingest_cihi.py  ingest_dpd.py  ingest_hc.py  load_fda_shortages.py
src/shortage_forecast/: __init__.py  baseline.py  config.py  dashboard.py  data_loader.py  demo.py  operational.py
tests/: conftest.py  test_config.py  test_data_loader.py  test_demo.py  test_metrics.py  test_models.py
