[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drug-shortage-forecast"
version = "0.1.0"
description = "90-day shortage prediction model for prescription drugs sold in Canada."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Pickett" }]
dependencies = [
    "requests",
    "pandas",
    "python-dotenv",
    "duckdb>=1.3,<1.5",
    "dbt-duckdb",
    "pyarrow",
    "matplotlib",
    "scikit-learn",
    "lightgbm",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
notebook = [
    "jupyterlab",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["shortage_forecast*", "ingest*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
filterwarnings = [
    # LightGBM + sklearn are noisy with deprecation warnings we don't control.
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: tests that train a model end-to-end on the demo database",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "notebooks",
    "dbt",
    ".venv",
    "data",
    "baseline_results",
]

[tool.ruff.lint]
# Sensible defaults: pyflakes (F), pycodestyle errors (E), isort (I).
# We don't enable docstring or naming rules — too noisy for a portfolio repo.
select = ["E", "F", "I", "W", "B"]
ignore = [
    "E501",  # line length handled by formatter, not linter
    "B008",  # default arguments are fine in CLI helpers
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
